fixed p tag wrapping also finished result page

--- a/DrugProNET/CSS/3_column.css
+++ b/DrugProNET/CSS/3_column.css
@@ -1,3 +1,4 @@
 .body-content {
+    width: 45%;
     flex: 0 0 45%;
 }
