--- a/DrugProNET/CSS/base_style.css
+++ b/DrugProNET/CSS/base_style.css
@@ -36,6 +36,10 @@ nav {
     width: 100%;
 }
 
+.query-select-text {
+    color: #738569 !important;
+}
+
 .horizontal-list {
     margin: 0;
     list-style: none;
